--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,12 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+li {
+  border: 3px solid orange;
+  border-right: none;
+}
+
+li:last-child {
+  border-right: 3px solid orange;
+}
