--- a/src/index.css
+++ b/src/index.css
@@ -4,11 +4,26 @@ body {
   font-family: sans-serif;
 }
 
-li {
-  border: 3px solid orange;
-  border-right: none;
+ul {
+  display: flex;
+  justify-content: center;
+  padding: 0;
+  list-style-type: none;
 }
 
-li:last-child {
-  border-right: 3px solid orange;
+li {
+  list-style-type: none;
+  width: 5%;
+  background-color: #DFC7A5;
+  box-shadow:
+    inset 3px 3px 5px 0px RGBA(0,0,0,.1),
+    inset -3px -3px 5px 0px RGBA(255,255,255,.4);
+}
+
+li:hover {
+  cursor: grab;
+}
+
+h1 {
+  text-align: center;
 }
